   compilation lines to pull in extra headers necessary for <dtrace.h> to
   be properly parsed.  These headers are in a directory whose name depends
   on the running kernel: if a DTrace kernel is not being run at
   compilation time, you'll have to find the right directory by hand.  If
   this is necessary, an error message from libdtrace-config will tell you.

Bugfixes:

 - Do not require sdt.ko to be loaded before allowing the use of the 'cpu'
   variable.

 - Passing an object file through dtrace -G no longer corrupts it on
   SPARC64, echoing a similar bugfix made to x86 long ago.

 - Improve tracking of process state on SPARC64 a bit.

 - Bitfields in kernel types are now better-supported, though some
   bitfields still do not work, notably those crossing machine word
   boundaries.

 - dtrace_print_lquantize() no longer normalizes the name of the lowest
   bucket, only the bucket contents (as intended).

 - jstack() was fetching data from the wrong offset, leading to garbage
   output at the start of the stack dump.

 - Reading of unaligned data from high addresses in traced processes
   was failing.  In practice only SPARC has any data at addresses high
   enough to cause this, and most of the accesses done are aligned: but
   the machinery that adjusts to changes in glibc's internal data
   structures was broken, leading to failures to look up symbols after
   certain glibc upgrades.

 - dtrace -C and -G now search for cpp and ld along the PATH rather than
   defaulting to /usr/bin/cpp and /usr/bin/ld, fixing failures with
   compilers in non-default locations, like the Software Collections
   devtoolset packages.

 - dtrace-utils-devel now requires elfutils-libelf-devel.  (This
   dependency was always present in practice but was mistakenly omitted
   until now.)


0.6.0 (Apr 3rd, 2017)
---------------------
Kernel release: 4.1.12-97.el6uek

New features:

 - Function boundary tracing (FBT) is supported for entry probes to most